[FIX] stock_barcode: return link
The return arrow in the barcode client action menu was too small and
placed randomly inside the page.

This commit try to beautify a little bit more this front page.

--- a/stock_barcode/static/src/scss/stock_barcode.scss
+++ b/stock_barcode/static/src/scss/stock_barcode.scss
@@ -9,6 +9,11 @@
     }
 }
 
+.o_stock_barcode_menu {
+  display: block;
+  float: left;
+}
+
 .o_stock_barcode_main_menu {
     width: 100%;
     text-align: center;
